--- a/index.ipynb
+++ b/index.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "def attendance(advertising):\n",
-    "    return e"
+    "    return 3/2 * advertising"
    ]
   },
   {
