Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,11 +93,13 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def attendance_with_friends(advertising):\n",
-    "    pass"
+    "    return "
    ]
   },
   {
