--- a/index.ipynb
+++ b/index.ipynb
@@ -1123,7 +1123,8 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    pass"
+    "    y = []\n",
+    "    for poi"
    ]
   },
   {
