Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1124,7 +1124,8 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    y = []\n",
-    "    for poi"
+    "    for x in x_values:\n",
+    "        "
    ]
   },
   {
