--- a/index.ipynb
+++ b/index.ipynb
@@ -1125,7 +1125,7 @@
     "def m_b_data(m, b, x_values):\n",
     "    y = []\n",
     "    for x in x_values:\n",
-    "        "
+    "        y.append()"
    ]
   },
   {
