Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1125,7 +1125,8 @@
     "def m_b_data(m, b, x_values):\n",
     "    y = []\n",
     "    for x in x_values:\n",
-    "        y.append()"
+    "        y.append(m * x + b)\n",
+    "        "
    ]
   },
   {
