Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1126,7 +1126,7 @@
     "    y = []\n",
     "    for x in x_values:\n",
     "        y.append(m * x + b)\n",
-    "    return {}"
+    "    return {'x': x_values, 'y'}"
    ]
   },
   {
