--- a/index.ipynb
+++ b/index.ipynb
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,14 +1126,25 @@
     "    y = []\n",
     "    for x in x_values:\n",
     "        y.append(m * x + b)\n",
-    "    return {'x': x_values, 'y'}"
+    "    return {'x': x_values, 'y' : y}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m_b_data(1.5, 20, [0, 50, 100]) # {'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
    ]
