--- a/index.ipynb
+++ b/index.ipynb
@@ -1163,7 +1163,8 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
-    "    out = m_b_data(m, b, x_)"
+    "    out = m_b_data(m, b, x_values)\n",
+    "    out.up"
    ]
   },
   {
