--- a/index.ipynb
+++ b/index.ipynb
@@ -1164,7 +1164,8 @@
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
     "    out = m_b_data(m, b, x_values)\n",
-    "    out['mode'] "
+    "    out['mode'] = mode\n",
+    "    out['name'] = "
    ]
   },
   {
