--- a/index.ipynb
+++ b/index.ipynb
@@ -1250,7 +1250,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    change_y = second_show['']"
+    "    change_y = second_show['attendance'] - first_show['atten']"
    ]
   },
   {
