--- a/index.ipynb
+++ b/index.ipynb
@@ -1251,7 +1251,7 @@
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    change_y = second_show['attendance'] - first_show['attendance']\n",
-    "    change_x = second_show['']"
+    "    change_x = second_show['budget'] - fist_show['budget']"
    ]
   },
   {
