Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1245,32 +1245,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
     "    change_y = second_show['attendance'] - first_show['attendance']\n",
-    "    change_x = second_show['budget'] - fist_show['budget']\n",
+    "    change_x = second_show['budget'] - first_show['budget']\n",
     "    return change_y/change_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'fist_show' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-e9f1588c7ba0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmarginal_return_on_budget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_show\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond_show\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 1.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-19-cb64acf19f12>\u001b[0m in \u001b[0;36mmarginal_return_on_budget\u001b[0;34m(first_show, second_show)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmarginal_return_on_budget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_show\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond_show\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mchange_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msecond_show\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'attendance'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mfirst_show\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'attendance'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mchange_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msecond_show\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'budget'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mfist_show\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'budget'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mchange_y\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mchange_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'fist_show' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
