--- a/index.ipynb
+++ b/index.ipynb
@@ -1418,7 +1418,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    pass"
+    "    points = sorted"
    ]
   },
   {
