--- a/index.ipynb
+++ b/index.ipynb
@@ -1418,7 +1418,8 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    points = sorted_points(x_values, y_values)"
+    "    points = sorted_points(x_values, y_values)\n",
+    "    slope = "
    ]
   },
   {
