--- a/index.ipynb
+++ b/index.ipynb
@@ -1419,7 +1419,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    points = sorted_points(x_values, y_values)\n",
-    "    slope = (points[-1][1] - points[0][1]) / (points[-1][0])"
+    "    slope = (points[-1][1] - points[0][1]) / (points[-1][0] - points[0])"
    ]
   },
   {
