Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1413,20 +1413,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
     "    points = sorted_points(x_values, y_values)\n",
-    "    slope = (points[-1][1] - points[0][1]) / (points[-1][0] - points[0])"
+    "    slope = (points[-1][1] - points[0][1]) / (points[-1][0] - points[0][0])\n",
+    "    return slope"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "slope([200, 400], [400, 700]) # 1.5"
    ]
