--- a/index.ipynb
+++ b/index.ipynb
@@ -1457,7 +1457,7 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    if isinstance(m, flo)"
+    "    if isinstance(m, (float,int)"
    ]
   },
   {
