Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1457,7 +1457,8 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    if isinstance(m, (float,int)): "
+    "    if isinstance(m, (float,int)): pass\n",
+    "    else: m = s"
    ]
   },
   {
