--- a/index.ipynb
+++ b/index.ipynb
@@ -1458,7 +1458,7 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if isinstance(m, (float,int)): pass\n",
-    "    else: m = s"
+    "    else: m = slope(x)"
    ]
   },
   {
