--- a/index.ipynb
+++ b/index.ipynb
@@ -1458,7 +1458,8 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    if isinstance(m, (float,int)): pass\n",
-    "    else: m = slope(x)"
+    "    else: m = slope(x_values, y_values)\n",
+    "        "
    ]
   },
   {
