Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1457,8 +1457,10 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    if isinstance(m, (float,int)): pass\n",
-    "    else: m = slope(x_values, y_values)\n",
+    "    if isinstance(m, (float,int)):\n",
+    "        pass\n",
+    "    else:\n",
+    "        m = slope(x_values, y_values)\n",
     "        "
    ]
   },
