--- a/index.ipynb
+++ b/index.ipynb
@@ -1461,6 +1461,7 @@
     "        pass\n",
     "    else:\n",
     "        m = slope(x_values, y_values)\n",
+    "    points = \n",
     "        "
    ]
   },
