Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1461,7 +1461,7 @@
     "        pass\n",
     "    else:\n",
     "        m = slope(x_values, y_values)\n",
-    "    points = \n",
+    "    points = sorted_points(x_val)\n",
     "        "
    ]
   },
