--- a/index.ipynb
+++ b/index.ipynb
@@ -1462,7 +1462,7 @@
     "    else:\n",
     "        m = slope(x_values, y_values)\n",
     "    points = sorted_points(x_values, y_values)\n",
-    "    b = points[-1][1] - ()\n",
+    "    b = points[-1][1] - (m * points[-1])\n",
     "        "
    ]
   },
