--- a/index.ipynb
+++ b/index.ipynb
@@ -1522,7 +1522,8 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    b = y_intercept(x_values)"
+    "    b = y_intercept(x_values, y_values)\n",
+    "    m = sl"
    ]
   },
   {
