--- a/index.ipynb
+++ b/index.ipynb
@@ -1568,12 +1568,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    ret"
+    "    return m * x + b"
    ]
   },
   {
